test/should-fail/缺少表达式-9.j
function test takes nothing returns nothing
    local boolean b = not
endfunction